Fix layout bug on screening pages when viewport is < 900px wide

--- a/_sass/5_components/_screening.scss
+++ b/_sass/5_components/_screening.scss
@@ -2,9 +2,17 @@
   header {
     background-color: black;
     position: relative;
-    margin-left: calc(-50vw + 450px);
-    margin-right: calc(-50vw + 450px);
     overflow: hidden;
+
+    @include respond-to("mobile-up") {
+      margin-left: -30px;
+      margin-right: -30px;
+    }
+
+    @media screen and (min-width: 900px) {
+      margin-left: calc(-50vw + 450px);
+      margin-right: calc(-50vw + 450px);
+    }
   }
 
   &_backdrop {
